Implement JDK-8242888 & JDK-8229959